sandbox/output
OneHundredDoorsTest.java:9: error: cannot find symbol
        int actual = Hiker.answer();
                     ^
  symbol:   variable Hiker
  location: class OneHundredDoorsTest
1 error
